# be/svc-auth/authpb/passwd.swagger.json
@@ -261,6 +261,12 @@
             "type": "string"
           },
           {
+            "name": "tenant_roles",
+            "description": "This is a request variable of the map type. The query format is \"map_name[key]=value\", e.g. If the map name is Age, the key type is string, and the value type is integer, the query parameter is expressed as Age[\"bob\"]=18",
+            "in": "query",
+            "required": false
+          },
+          {
             "name": "system_roles",
             "in": "query",
             "required": false,
@@ -278,6 +284,17 @@
     }
   },
   "definitions": {
+    "authpbListText": {
+      "type": "object",
+      "properties": {
+        "list": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        }
+      }
+    },
     "authpbLoginOauth2Request": {
       "type": "object",
       "properties": {
@@ -404,6 +421,12 @@
         },
         "status": {
           "type": "string"
+        },
+        "tenant_roles": {
+          "type": "object",
+          "additionalProperties": {
+            "$ref": "#/definitions/authpbListText"
+          }
         },
         "system_roles": {
           "type": "array",
